--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                     <!--<img src="assets/img/logo.png" alt="">-->
                     <br/>
                     <br/>
+                    <h1 class="title">We Help :)</h1>
                     <h2 class="subtitle">We're working hard to launch our website and we'll be ready very soon</h2>
                     <br/>
              
