--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
                     <br/>
                     <br/>
                     <h1 class="title">We Help :)</h1>
-                    <h2 class="subtitle">We're working hard to launch our website and we'll be ready very soon</h2>
+                    <h2 class="subtitle">No act of kindness, however small, is ever wasted.</h2>
+                    <br/>
+                    <br/>
+                    <h2 class="subtitle">We're working hard to get our services running and we'll be ready very soon</h2>
                     <br/>
              
                     <form class="form-inline validate signup" action=" method="get" role="form">
