text updates info

--- a/index.html
+++ b/index.html
@@ -56,7 +56,16 @@
                     <br/>
                     <h1 class="title">We Help :)</h1>
                     <h2 class="subtitle">No act of kindness, however small, is ever wasted.</h2>
-                    <br/>
+                    <h3 class="subtitle">Currently we are focusing on ~ </h3>
+                    <p>
+                        &#x2618;Helping poor people in their medical emergency
+
+                        &#x2618;Funding poor people education
+
+                        &#x2618;Distributing blankets & cloths in winter
+
+                        &#x2618;Donating in orphan / old people centers
+                    </p>
                     <br/>
                     <h2 class="subtitle">We're working hard to get our services running and we'll be ready very soon</h2>
                     <br/>
