--- a/index.html
+++ b/index.html
@@ -53,18 +53,14 @@
                 <div class="col-sm-12 col-md-12 col-lg-12">
                     <!--<img src="assets/img/logo.png" alt="">-->
                     <br/>
-                    <br/>
                     <h1 class="title">We Help :)</h1>
                     <h2 class="subtitle">No act of kindness, however small, is ever wasted.</h2>
                     <h3 class="subtitle">Currently we are focusing on ~ </h3>
-                    <p>
-                        &#x2618;Helping poor people in their medical emergency
-
-                        &#x2618;Funding poor people education
-
-                        &#x2618;Distributing blankets & cloths in winter
-
-                        &#x2618;Donating in orphan / old people centers
+                    <p style="color:white">
+                        &#x2618;Helping poor people in their medical emergency<br/>
+                        &#x2618;Funding poor people education<br/>
+                        &#x2618;Distributing blankets & cloths in winter<br/>
+                        &#x2618;Donating in orphan / old people centers<br/>
                     </p>
                     <br/>
                     <h2 class="subtitle">We're working hard to get our services running and we'll be ready very soon</h2>
