--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@
                     <br/>
                     <h1 class="title">We Help :)</h1>
                     <h2 class="subtitle">No act of kindness, however small, is ever wasted.</h2>
-                    <h3 class="subtitle">Currently we are focusing on ~ </h3>
+                    <h2 class="subtitle" style="color:white"><i>Currently we are focusing on</i></h2>
                     <p style="color:white">
-                        &#x2618;Helping poor people in their medical emergency<br/>
-                        &#x2618;Funding poor people education<br/>
-                        &#x2618;Distributing blankets & cloths in winter<br/>
-                        &#x2618;Donating in orphan / old people centers<br/>
+                        &#x2618;&nbsp;Helping people in medical emergency<br/>
+                        &#x2618;&nbsp;Funding poor people education<br/>
+                        &#x2618;&nbsp;Distributing blankets & cloths in winter<br/>
+                        &#x2618;&nbsp;Donating in orphan / old people centers<br/>
                     </p>
                     <br/>
-                    <h2 class="subtitle">We're working hard to get our services running and we'll be ready very soon</h2>
+                    <h3 class="subtitle">We're working hard to get our services running and we'll be ready very soon</h3>
                     <br/>
              
                     <form class="form-inline validate signup" action=" method="get" role="form">
