--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         &#x2618;&nbsp;Helping people in medical emergency<br/>
                         &#x2618;&nbsp;Funding poor people education<br/>
                         &#x2618;&nbsp;Distributing blankets & cloths in winter<br/>
-                        &#x2618;&nbsp;Donating in orphan / old people centers<br/>
+                        &#x2618;&nbsp;Donating in orphan / old age centers<br/>
                     </p>
                     <br/>
                     <h3 class="subtitle">We're working hard to get our services running and we'll be ready very soon</h3>
