--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         &#x2618;&nbsp;Donating in orphan / old age centers<br/>
                     </p>
                     <br/>
-                    <h3 class="subtitle">We're working hard to get our services running and we'll be ready very soon</h3>
+                    <h3 class="subtitle">we'll be ready very soon</h3>
                     <br/>
              
                     <form class="form-inline validate signup" action=" method="get" role="form">
@@ -80,10 +80,10 @@
                         </li>
                         <li><a href="#" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a>
                         </li>
-                        <li><a href="#" class="icoGit" title="Github"><i class="fa fa-github"></i></a>
+<!--                        <li><a href="#" class="icoGit" title="Github"><i class="fa fa-github"></i></a>
                         </li>
                         <li><a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a>
-                        </li>
+                        </li>-->
                     </ul>
                 </div>
             </div>
