--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html>
 <head>
-<title>Krishna Nandan : We Help :)</title>
+<title>Societica A Entertainment Category Flat Bootstarp Resposive Website Template | About :: w3layouts</title>
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="js/jquery.min.js"></script>
@@ -17,24 +17,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!--//theme-style-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="" />
+<meta name="keywords" content="Societica Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
+Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!--fonts-->
 <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,300,100,700' rel='stylesheet' type='text/css'>
 <!--//fonts-->
-<script src="js/responsiveslides.min.js"></script>
-	<script>
-    $(function () {
-      $("#slider").responsiveSlides({
-      	auto: true,
-      	speed: 500,
-        namespace: "callbacks",
-        pager: false,
-		nav:true,
-      });
-    });
-  </script>
-  <!---->
+<!---->
   <script src="js/jquery.chocolat.js"></script>
 		<link rel="stylesheet" href="css/chocolat.css" type="text/css" media="screen" charset="utf-8" />
 		<!--light-box-files -->
@@ -47,82 +36,66 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 </head>
 <body> 
 <!--header-->
-<div class="header">
-    <div class="container">
-        <div class="logo" style="margin: 0">
-            <a href="index.html"><img src="images/logo.png" alt="Krishna Nandan" ></a>
-        </div>
-        <div class="top-nav" style="height: 136px">
-            <span class="menu"> </span>
-            <ul>
-                <li class="active"><a href="index.html"  >HOME</a></li>
-                <li><a href="" data-hover="ABOUT">ABOUT</a></li>
-                <li><a href="" data-hover="ACTIVITIES">ACTIVITIES</a></li>
-                <li><a href="" data-hover="EVENTS">EVENTS</a></li>
-                <li><a href="" data-hover="CONTACT">CONTACT</a></li>
-            </ul>
-            <!--script-->
-            <script>
-                $("span.menu").click(function(){
-                    $(".top-nav ul").slideToggle(500, function(){
-                    });
-                });
-            </script>
-
-        </div>
-        <div class="clearfix"> </div>
-    </div>
-</div>
 <!--banner-->
-	<div class="slider">
-	    <div class="callbacks_container">
-	      <ul class="rslides" id="slider">
-	        <li>
-	          <img src="images/1.jpg" alt="">
-			  <div class="banner-matter">
-				<!--<h2>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form</h2>-->
-			  </div>
-	        </li>
-	        <li>
-	          <img src="images/2.jpg" alt="">
-			<div class="banner-matter">
-				<!--<h2>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form</h2>-->
-			  </div>			  
-	        </li>
-	        <li>
-	          <img src="images/3.jpg" alt="">
-				<div class="banner-matter">
-				<!--<h2>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form</h2>-->
-			  </div>			  
-	        </li>
-              <li>
-                  <img src="images/4.jpg" alt="">
-                  <div class="banner-matter">
-                      <!--<h2>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form</h2>-->
-                  </div>
-              </li>
-	      </ul>
-	  </div>
-	  </div>
+	<div class="banner">
+			
+		</div>	
+	<!---->
+	<div class="header">
+		<div class="container">			
+			<div class="logo">
+					<a href="index.html"><img src="images/logo.png" alt=" " /></a>
+			</div>
+			<div class="top-nav">			
+					<span class="menu"> </span>
+					<ul>
+						<li ><a href="index.html"  data-hover="HOME">HOME</a></li>
+						<li class="active"><a href="about.html">ABOUT</a></li>
+						<li><a href="activities.html" data-hover="ACTIVITIES">ACTIVITIES</a></li>
+						<li><a href="events.html" data-hover="EVENTS">EVENTS</a></li>
+						<li><a href="contact.html" data-hover="CONTACT">CONTACT</a></li>
+					</ul>
+					<!--script-->
+				<script>
+					$("span.menu").click(function(){
+						$(".top-nav ul").slideToggle(500, function(){
+						});
+					});
+			</script>
+				
+				</div>
+				<div class="clearfix"> </div>
+		</div>
+	</div>
 <!--content-->
 	<div class="content">
 		<div class="container">
-			<div class="welcome">
-				<div class="welcome-left">
-					<div class="welcome-left-in">
-						<h3>WELCOME</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in luptate velit esse.</p>
+		<div class="about">
+				<div class="about-top">
+						<h3>about</h3>
+						<p>There are many variations of passages of Lorem Ipsum available,</p>
+					</div>
+			<div class="about-bottom">
+				<div class="col-md-7 about-grid">
+					<h4>ABOUT US</h4>
+					<h6><a href="#">Maecenas tristique orci ac sem. Duis ultricies pharetra magna. Donec accumsan malesuada orci donec sit amet eros. Lorem ipsum dolor sit amet.</a></h6>
+					<p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Maecenas tristique orci ac sem. Duis ultricies pharetra magna. Donec accumsan malesuada orci. Donec sit amet eros. Lorem ipsum dolor sit amet, con sectetuer adipiscing elit. Mauris fermentum dictum magna. Sed laoreet aliquam leo. Ut tellus dolor, dapibus eget, elementum vel, cursus eleifend, elit. Aenean auctor wisi et urna.</p>
+					<p class="sem">Maecenas tristique orci ac sem. Duis ultricies pharetra magna. Donec accumsan malesuada orci. Donec sit amet eros. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Mauris fermentum dictum magna. Sed laoreet aliquam leo. Ut tellus dolor.</p>
+				</div>
+				<div class="col-md-5">
+				<div class="view effect">
+						<a href="#" class="mask">
+				<img src="images/ab1.jpg" alt="image" class="img-responsive zoom-img">
+				</a>							
 					</div>
 				</div>
-				<div class="welcome-right">
-					<img src="images/ba1.jpg" class="img-responsive" alt="" >
-				</div>
-			<div class="clearfix"> </div>
+				<div class="clearfix"> </div>
+			</div>
 			</div>
 			<div class="gallery">
 			<h3>GALLERY</h3>
 			<!-- requried-jsfiles-for owl -->
-							<link href="css/owl.carousel.css" rel="stylesheet" />
+							<link href="css/owl.carousel.css" rel="stylesheet">
 							    <script src="js/owl.carousel.js"></script>
 							        <script>
 									    $(document).ready(function() {
@@ -142,49 +115,50 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div id="example1">
 		<div id="owl-demo" class="owl-carousel text-center">
 			<div class="item">
-				<a href="images/pi.jpg">
-					<img class="img-responsive lot" src="images/pi.jpg" alt="" >
+				<a href="images/pi.jpg" >
+					<img class="img-responsive lot" src="images/pi.jpg" alt="">
 				</a>
 			</div>
 			<div class="item">
 				<a href="images/pi1.jpg" >
-					<img class="img-responsive lot" src="images/pi1.jpg" alt="" >
+					<img class="img-responsive lot" src="images/pi1.jpg" alt="">
 				</a>
 			</div>
 			<div class="item">
 				<a href="images/pi2.jpg" >
-					<img class="img-responsive lot" src="images/pi2.jpg" alt="" >
+					<img class="img-responsive lot" src="images/pi2.jpg" alt="">
 				</a>
 			</div>
 			<div class="item">
-				<a href="images/pi3.jpg">
+				<a href="images/pi3.jpg" >
 					<img class="img-responsive lot" src="images/pi3.jpg" alt="">
 				</a>
 			</div>
 			<div class="item">
 				<a href="images/pi.jpg">
-					<img class="img-responsive lot" src="images/pi.jpg" alt="" >
+					<img class="img-responsive lot" src="images/pi.jpg" alt="">
 				</a>
 			</div>
 			<div class="item">
-				<a href="images/pi1.jpg">
+				<a href="images/pi1.jpg" >
 					<img class="img-responsive lot" src="images/pi1.jpg" alt="">
 				</a>
 			</div>
 			<div class="item">
 				<a href="images/pi2.jpg">
-					<img class="img-responsive lot" src="images/pi2.jpg" alt="" >
+					<img class="img-responsive lot" src="images/pi2.jpg" alt="">
 				</a>
 			</div>
 			<div class="item">
-				<a href="images/pi3.jpg">
-					<img class="img-responsive lot" src="images/pi3.jpg" alt="" >
+				<a href="images/pi3.jpg" >
+					<img class="img-responsive lot" src="images/pi3.jpg" alt="">
 				</a>
 			</div>
 		</div>
 		</div>
 		<!--//sreen-gallery-cursual-->
 	</div>
+	<!---->
 	<!---->
 	<div class="number-text">
 		<div class="col-md-3 number" >
@@ -227,7 +201,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</ul>
 					<div class="clearfix"> </div>
 					</div>
-				 <!--<p class="footer-grid">Design by <a href="http://w3layouts.com/" target="_blank">W3layouts</a> </p>-->
+				 <p class="footer-grid">Design by <a href="http://w3layouts.com/" target="_blank">W3layouts</a> </p>	
 		</div>
 	</div>
 
