--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="header">
 		<div class="container">			
 			<div class="logo">
-					<a href="index.html"><img src="images/logo.png" alt=" " /></a>
+					<a href="index.html"><img src="images/logo1.png" alt=" " /></a>
 			</div>
 			<div class="top-nav">			
 					<span class="menu"> </span>
