--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <div class="header">
     <div class="container">
         <div class="logo" style="margin: 0">
-            <a href="index.html"><img src="images/logo.png" alt="Krishna Nandan" ></a>
+            <a href="index.html"><img src="images/logo1.png" alt="Krishna Nandan" ></a>
         </div>
         <div class="top-nav" style="height: 136px">
             <span class="menu"> </span>
@@ -90,7 +90,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			  </div>			  
 	        </li>
 	        <li>
-	          <img src="images/3.jpg" alt="">
+	          <img src="images/3a.jpg" alt="">
 				<div class="banner-matter">
 				<!--<h2>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form</h2>-->
 			  </div>			  
@@ -111,7 +111,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="welcome-left">
 					<div class="welcome-left-in">
 						<h3>WELCOME</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in luptate velit esse.</p>
+                        <p class="subtitle">No act of kindness, however small, is ever wasted.</p>
+                        <div class="contact-form">
+                            <form>
+                                <div class="clearfix"> </div>
+                                <input type="submit" value="Contribute" />
+                            </form>
+                        </div>
 					</div>
 				</div>
 				<div class="welcome-right">
@@ -207,8 +213,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</div>
 		<div class="col-md-3 number number-is" >
 			<div class="number-in">
-				<h5>Lorem Ipsum is simply dummy tex</h5>
-				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered 	</p>
+                <h2 class="subtitle" style="color:white"><i>Currently we are focusing on</i></h2>
+                <p style="color:white">
+                    &#x2618;&nbsp;Helping people in medical emergency<br/>
+                    &#x2618;&nbsp;Funding poor people education<br/>
+                    &#x2618;&nbsp;Distributing blankets & cloths in winter<br/>
+                    &#x2618;&nbsp;Donating in orphan / old age centers<br/>
 			</div>
 		</div>
 		<div class="clearfix"> </div>
