single page update

--- a/index.html
+++ b/index.html
@@ -1,245 +1,35 @@
-<!--A Design by W3layouts 
-Author: W3layout
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Krishna Nandan : We Help :)</title>
-<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="js/jquery.min.js"></script>
-<!-- Custom Theme files -->
-<!--theme-style-->
-<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />	
-<!--//theme-style-->
-<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="" />
-<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-<!--fonts-->
-<link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,300,100,700' rel='stylesheet' type='text/css'>
-<!--//fonts-->
-<script src="js/responsiveslides.min.js"></script>
-	<script>
-    $(function () {
-      $("#slider").responsiveSlides({
-      	auto: true,
-      	speed: 500,
-        namespace: "callbacks",
-        pager: false,
-		nav:true,
-      });
-    });
-  </script>
-  <!---->
-  <script src="js/jquery.chocolat.js"></script>
-		<link rel="stylesheet" href="css/chocolat.css" type="text/css" media="screen" charset="utf-8" />
-		<!--light-box-files -->
-		<script type="text/javascript" charset="utf-8">
-		$(function() {
-			$('#example1 a').Chocolat();
-		});
-		</script>
-
+<title>कृष्णा नंदन</title>
+<link rel="icon" href="favicon.png" type="image/png" sizes="16x16">
+<link href="tools/style.css" rel="stylesheet" type="text/css" media="screen" />
+<script type="text/javascript" src="tools/jquery.min.js"></script> 
+<link href='http://fonts.googleapis.com/css?family=Josefin+Sans:600,700|Damion' rel='stylesheet' type='text/css'>
+<meta name="viewport" content="width=device-width, initial-scale = 1.0, user-scalable = no">
 </head>
-<body> 
-<!--header-->
-<div class="header">
-    <div class="container">
-        <div class="logo" style="margin: 0">
-            <a href="index.html"><img src="images/logo1.png" alt="Krishna Nandan" ></a>
-        </div>
-        <div class="top-nav" style="height: 136px">
-            <span class="menu"> </span>
-            <ul>
-                <li class="active"><a href="index.html"  >HOME</a></li>
-                <li><a href="" data-hover="ABOUT">ABOUT</a></li>
-                <li><a href="" data-hover="ACTIVITIES">ACTIVITIES</a></li>
-                <li><a href="" data-hover="EVENTS">EVENTS</a></li>
-                <li><a href="" data-hover="CONTACT">CONTACT</a></li>
-            </ul>
-            <!--script-->
-            <script>
-                $("span.menu").click(function(){
-                    $(".top-nav ul").slideToggle(500, function(){
-                    });
-                });
-            </script>
-
-        </div>
-        <div class="clearfix"> </div>
-    </div>
+<body>
+<div class="black"></div>
+<div id="wrapper">
+	<div id="header">
+		<h1>कृष्णा नंदन</h1>
+		<h2><strong class="sep-one"></strong>We Help In Need<strong class="sep-two"></strong></h2>
+	</div>
+	<div id="middle">
+		<p>No act of kindness, however small, is ever wasted. <br>
+            <span>Reach out to us on our social pages.
+            </span></p>
+	</div>
+	<div id="footer">
+		<div>
+		<ul class="social">
+			<li class="facebook"><a href="http://www.facebook.com/krishnanandan.org"></li>
+			<li class="twitter"><a href="#"></li>
+			<li class="youtube"><a href="#"></li>
+		</ul>
+		</div>
+	</div>
 </div>
-<!--banner-->
-	<div class="slider">
-	    <div class="callbacks_container">
-	      <ul class="rslides" id="slider">
-	        <li>
-	          <img src="images/1.jpg" alt="">
-			  <div class="banner-matter">
-				<!--<h2>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form</h2>-->
-			  </div>
-	        </li>
-	        <li>
-	          <img src="images/2.jpg" alt="">
-			<div class="banner-matter">
-				<!--<h2>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form</h2>-->
-			  </div>			  
-	        </li>
-	        <li>
-	          <img src="images/3a.jpg" alt="">
-				<div class="banner-matter">
-				<!--<h2>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form</h2>-->
-			  </div>			  
-	        </li>
-              <li>
-                  <img src="images/4.jpg" alt="">
-                  <div class="banner-matter">
-                      <!--<h2>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form</h2>-->
-                  </div>
-              </li>
-	      </ul>
-	  </div>
-	  </div>
-<!--content-->
-	<div class="content">
-		<div class="container">
-			<div class="welcome">
-				<div class="welcome-left">
-					<div class="welcome-left-in">
-						<h3>WELCOME</h3>
-                        <p class="subtitle">No act of kindness, however small, is ever wasted.</p>
-                        <div class="contact-form">
-                            <form>
-                                <div class="clearfix"> </div>
-                                <input type="submit" value="Contribute" />
-                            </form>
-                        </div>
-					</div>
-				</div>
-				<div class="welcome-right">
-					<img src="images/ba1.jpg" class="img-responsive" alt="" >
-				</div>
-			<div class="clearfix"> </div>
-			</div>
-			<div class="gallery">
-			<h3>GALLERY</h3>
-			<!-- requried-jsfiles-for owl -->
-							<link href="css/owl.carousel.css" rel="stylesheet" />
-							    <script src="js/owl.carousel.js"></script>
-							        <script>
-									    $(document).ready(function() {
-									      $("#owl-demo").owlCarousel({
-									        items : 4,
-									        lazyLoad : true,
-									        autoPlay : true,
-									        navigation : true,
-									        navigationText :  true,
-									        pagination : false,
-									      });
-									    });
-									  </script>
-							 <!-- //requried-jsfiles-for owl -->
-
-		<!-- start content_slider -->
-		<div id="example1">
-		<div id="owl-demo" class="owl-carousel text-center">
-			<div class="item">
-				<a href="images/pi.jpg">
-					<img class="img-responsive lot" src="images/pi.jpg" alt="" >
-				</a>
-			</div>
-			<div class="item">
-				<a href="images/pi1.jpg" >
-					<img class="img-responsive lot" src="images/pi1.jpg" alt="" >
-				</a>
-			</div>
-			<div class="item">
-				<a href="images/pi2.jpg" >
-					<img class="img-responsive lot" src="images/pi2.jpg" alt="" >
-				</a>
-			</div>
-			<div class="item">
-				<a href="images/pi3.jpg">
-					<img class="img-responsive lot" src="images/pi3.jpg" alt="">
-				</a>
-			</div>
-			<div class="item">
-				<a href="images/pi.jpg">
-					<img class="img-responsive lot" src="images/pi.jpg" alt="" >
-				</a>
-			</div>
-			<div class="item">
-				<a href="images/pi1.jpg">
-					<img class="img-responsive lot" src="images/pi1.jpg" alt="">
-				</a>
-			</div>
-			<div class="item">
-				<a href="images/pi2.jpg">
-					<img class="img-responsive lot" src="images/pi2.jpg" alt="" >
-				</a>
-			</div>
-			<div class="item">
-				<a href="images/pi3.jpg">
-					<img class="img-responsive lot" src="images/pi3.jpg" alt="" >
-				</a>
-			</div>
-		</div>
-		</div>
-		<!--//sreen-gallery-cursual-->
-	</div>
-	<!---->
-	<div class="number-text">
-		<div class="col-md-3 number" >
-			<span>05/<b>20</b></span>
-			<small>Contrary to popular belief, Lorem Ipsum is not simply random text.</small>
-			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text </p>
-			<a href="#" class="read-more">READ MORE </a>
-		</div>
-		<div class="col-md-3 number" >
-			<span>10/<b>28</b></span>
-			<small>Contrary to popular belief, Lorem Ipsum is not simply random text.</small>
-			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text </p>
-			<a href="#" class="read-more">READ MORE </a>
-		</div>
-		<div class="col-md-3 number" >
-			<span>05/<b>15</b></span>
-			<small>Contrary to popular belief, Lorem Ipsum is not simply random text.</small>
-			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text </p>
-			<a href="#" class="read-more">READ MORE </a>
-		</div>
-		<div class="col-md-3 number number-is" >
-			<div class="number-in">
-                <h2 class="subtitle" style="color:white"><i>Currently we are focusing on</i></h2>
-                <p style="color:white">
-                    &#x2618;&nbsp;Helping people in medical emergency<br/>
-                    &#x2618;&nbsp;Funding poor people education<br/>
-                    &#x2618;&nbsp;Distributing blankets & cloths in winter<br/>
-                    &#x2618;&nbsp;Donating in orphan / old age centers<br/>
-			</div>
-		</div>
-		<div class="clearfix"> </div>
-	</div>
-		</div>
-	</div>	
-	<!--footer-->
-	<div class="footer">
-		<div class="container">
-				<div class="foter-bottom">	
-					<h3 class="follow">Follow Us On Social Networks :</h3>
-					<ul class="social-ic-icons">
-						<li class="facebook"><a href="https://www.facebook.com/krishnanandanorg/"><span> </span></a></li>
-						<li class="twitter"><a href="#"><span> </span></a></li>
-						<li class="gmail"><a href="#"><span> </span></a></li>
-					</ul>
-					<div class="clearfix"> </div>
-					</div>
-				 <!--<p class="footer-grid">Design by <a href="http://w3layouts.com/" target="_blank">W3layouts</a> </p>-->
-		</div>
-	</div>
-
 </body>
 </html>
